# fuzzyonet-implementation

./: CONTRIBUTING.md  README.md  fuzzyonet_from_libraries.py  fuzzyonet_from_scratch.py  main.ipynb  pyproject.toml
extra/: hello_sklearn.py  hello_xanfis.py
src/fuzzyonet/: fuzzyonet_from_scratch.py  typing.py
src/fuzzyonet/utils/: scikit_anfis_helpers.py
tests/: anfis_function.py  understand_scikit_anfis.py
tests/hello/: hello_skanfis.py
