[project]
name = "fuzzyonet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jupyter>=1.1.1",
  "scikit-anfis>=1.2.1",
  "scikit-learn>=1.8.0",
  "xanfis>=1.1.0",
]

[tool.uv.sources]
scikit-anfis = { git = "https://github.com/Frollamma/scikit-anfis.git" }
